namespace DataAccessLayer.Entities;

public class Address : BaseEntity
{
    public string? Street { get; set; }
    public string? PostalCode { get; set; }
    public string? City { get; set; }
    public string? Country { get; set; }
}
