namespace DataAccessLayer.Entities;

public class OrderStatus : BaseEntity
{
    public string? Name { get; set; }
}
