namespace DataAccessLayer.Entities;

public class ShippingMethod : BaseEntity
{
    public string? Name { get; set; }
    public string? Description { get; set; }
}
